--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,5 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+
+*>*{
+    font-family: 'Poppins', sans-serif;
 }
