--- a/pages/Shop/Shop.css
+++ b/pages/Shop/Shop.css
@@ -11,7 +11,7 @@ li {
 
 body {
   font-family: "Arial", sans-serif;
-  background: radial-gradient(#fff, #ffd6d6);
+  background: #F1EFF0;
 }
 
 /* Center the entire content */
