some Seller part implemented

--- a/pages/Shop/Shop.css
+++ b/pages/Shop/Shop.css
@@ -91,7 +91,7 @@ body {
 
 /* Updated button styles */
 .addToCartBtn {
-  background-color: #218c74;
+  background-color: #36a089;
   color: #fff;
   width: 100%;
   padding: 12px;
